# wow_simulator_rogue

./: .gitignore  Cargo.toml  README  ideas  mechanics  todo  web_environment_setup  web_requirements.txt
configs/: agi_wep_ench.yaml  cht_change.yaml  current.yaml  current_gear.yaml  distracting.yaml  eugenia_new.yaml  gutgore.yaml  muggers_belt.yaml  superior_striking_both.yaml  test.yaml  testing.yaml
db/: armor.yaml  buffs.yaml  enchants.yaml  items.db  set_bonuses.yaml  talents.yaml  weapons.yaml
item_sets/: blue_daggers  blue_daggers_agility  blue_daggers_barman  blue_daggers_base  blue_daggers_perdition  blue_daggers_quickstrike  blue_daggers_speed  cur_new_setup  current  daggers_best  dalrends  gutgore  head_shoulders  item_collection  item_collection_full  oliver  shoulders  swords  swords_best
src/: .main.rs.swp  armory.rs  buffs.yaml  create_items_database.py  create_table_call  cur  dalrends  items  items_armor  items_armor.yaml  items_weapons  items_weapons.yaml  main.rs  params  query.py  simulator.rs  stats.rs  talents.yaml  utils.rs  weights.rs
src/configs/: item_config  sim_config  talents.yaml
src/configs/buffs/: full.yaml  none.yaml
src/configs/enchants/: standard.yaml
src/configs/items/: current.yaml  test.yaml
src/configs/talents/: talents.yaml  talents_test.yaml
src/databases/: armor.yaml  enchants.yaml  weapons.yaml
wow_simulator_web/: db.sqlite3  manage.py
wow_simulator_web/simulator_interface/: apps.py  forms.py  old_views.py  urls.py  views.py
wow_simulator_web/wow_simulator_web/: asgi.py  settings.py  urls.py  wsgi.py
(+21 files in other folders)
