[package]
name = "wow_sim"
version = "0.1.0"
authors = ["Magnus Lindstrom <magnus.lindstrom91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5"
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[profile.dev]
opt-level = 3
